--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -10,19 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "5ce30291",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/gd/h510fd1921xczd25wx4pxkkh0000gn/T/ipykernel_92069/2110692023.py:3: DeprecationWarning: `import pandas_profiling` is going to be deprecated by April 1st. Please use `import ydata_profiling` instead.\n",
-      "  import pandas_profiling\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -32,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "dc66161a",
    "metadata": {},
    "outputs": [],
@@ -42,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2635fe56",
    "metadata": {},
    "outputs": [
@@ -180,15 +171,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   age          workclass   fnlgt   education   education-num   \n",
-       "0   39          State-gov   77516   Bachelors              13  \\\n",
+       "   age          workclass   fnlgt   education   education-num  \\\n",
+       "0   39          State-gov   77516   Bachelors              13   \n",
        "1   50   Self-emp-not-inc   83311   Bachelors              13   \n",
        "2   38            Private  215646     HS-grad               9   \n",
        "3   53            Private  234721        11th               7   \n",
        "4   28            Private  338409   Bachelors              13   \n",
        "\n",
-       "        marital-status          occupation    relationship    race      sex   \n",
-       "0        Never-married        Adm-clerical   Not-in-family   White     Male  \\\n",
+       "        marital-status          occupation    relationship    race      sex  \\\n",
+       "0        Never-married        Adm-clerical   Not-in-family   White     Male   \n",
        "1   Married-civ-spouse     Exec-managerial         Husband   White     Male   \n",
        "2             Divorced   Handlers-cleaners   Not-in-family   White     Male   \n",
        "3   Married-civ-spouse   Handlers-cleaners         Husband   Black     Male   \n",
@@ -202,7 +193,7 @@
        "4              0              0               40            Cuba   <=50K  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "49bd7369",
    "metadata": {},
    "outputs": [
@@ -246,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "3c2cac47",
    "metadata": {},
    "outputs": [],
@@ -261,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "eb5391e0",
    "metadata": {},
    "outputs": [
@@ -269,21 +260,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Values for column workclass:  {' State-gov', ' ?', ' Without-pay', ' Self-emp-not-inc', ' Federal-gov', ' Never-worked', ' Private', ' Local-gov', ' Self-emp-inc'} , Length:  9 \n",
+      "Values for column workclass:  {' Never-worked', ' Without-pay', ' State-gov', ' Private', ' Federal-gov', ' Local-gov', ' ?', ' Self-emp-not-inc', ' Self-emp-inc'} , Length:  9 \n",
       "\n",
-      "Values for column education:  {' Assoc-voc', ' 12th', ' 9th', ' 10th', ' Doctorate', ' 1st-4th', ' Preschool', ' HS-grad', ' Some-college', ' Masters', ' 11th', ' 5th-6th', ' Bachelors', ' Prof-school', ' 7th-8th', ' Assoc-acdm'} , Length:  16 \n",
+      "Values for column education:  {' 9th', ' 10th', ' Assoc-acdm', ' 1st-4th', ' 7th-8th', ' 11th', ' Doctorate', ' 5th-6th', ' Preschool', ' HS-grad', ' Bachelors', ' 12th', ' Prof-school', ' Some-college', ' Assoc-voc', ' Masters'} , Length:  16 \n",
       "\n",
       "Values for column education-num:  {1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16} , Length:  16 \n",
       "\n",
-      "Values for column marital-status:  {' Married-AF-spouse', ' Separated', ' Divorced', ' Married-civ-spouse', ' Married-spouse-absent', ' Never-married', ' Widowed'} , Length:  7 \n",
+      "Values for column marital-status:  {' Married-spouse-absent', ' Never-married', ' Separated', ' Married-civ-spouse', ' Divorced', ' Widowed', ' Married-AF-spouse'} , Length:  7 \n",
       "\n",
-      "Values for column occupation:  {' ?', ' Tech-support', ' Protective-serv', ' Sales', ' Farming-fishing', ' Transport-moving', ' Exec-managerial', ' Craft-repair', ' Prof-specialty', ' Handlers-cleaners', ' Machine-op-inspct', ' Priv-house-serv', ' Other-service', ' Armed-Forces', ' Adm-clerical'} , Length:  15 \n",
+      "Values for column occupation:  {' Exec-managerial', ' Other-service', ' Adm-clerical', ' Handlers-cleaners', ' Craft-repair', ' Tech-support', ' Prof-specialty', ' Farming-fishing', ' Sales', ' Protective-serv', ' Priv-house-serv', ' ?', ' Transport-moving', ' Machine-op-inspct', ' Armed-Forces'} , Length:  15 \n",
       "\n",
-      "Values for column relationship:  {' Not-in-family', ' Husband', ' Wife', ' Other-relative', ' Own-child', ' Unmarried'} , Length:  6 \n",
+      "Values for column relationship:  {' Other-relative', ' Wife', ' Not-in-family', ' Own-child', ' Husband', ' Unmarried'} , Length:  6 \n",
       "\n",
-      "Values for column race:  {' Asian-Pac-Islander', ' White', ' Other', ' Amer-Indian-Eskimo', ' Black'} , Length:  5 \n",
+      "Values for column race:  {' Amer-Indian-Eskimo', ' White', ' Black', ' Other', ' Asian-Pac-Islander'} , Length:  5 \n",
       "\n",
-      "Values for column native-country:  {' Cambodia', ' Iran', ' United-States', ' France', ' Thailand', ' England', ' China', ' Jamaica', ' Taiwan', ' Greece', ' Mexico', ' India', ' Trinadad&Tobago', ' Ireland', ' Poland', ' Cuba', ' Honduras', ' Dominican-Republic', ' Puerto-Rico', ' Yugoslavia', ' Scotland', ' Guatemala', ' Japan', ' Hong', ' Philippines', ' Hungary', ' Ecuador', ' Peru', ' Vietnam', ' Columbia', ' Italy', ' ?', ' Germany', ' Outlying-US(Guam-USVI-etc)', ' El-Salvador', ' Portugal', ' Laos', ' Canada', ' Holand-Netherlands', ' Haiti', ' Nicaragua', ' South'} , Length:  42 \n",
+      "Values for column native-country:  {' Hungary', ' Cuba', ' Honduras', ' Yugoslavia', ' Mexico', ' Jamaica', ' Cambodia', ' Philippines', ' Trinadad&Tobago', ' Puerto-Rico', ' Poland', ' United-States', ' Peru', ' Dominican-Republic', ' Vietnam', ' Holand-Netherlands', ' Laos', ' Ireland', ' Scotland', ' South', ' Italy', ' Japan', ' Iran', ' India', ' Portugal', ' Germany', ' Ecuador', ' Thailand', ' Taiwan', ' China', ' Greece', ' Canada', ' Guatemala', ' Columbia', ' El-Salvador', ' Hong', ' France', ' Outlying-US(Guam-USVI-etc)', ' ?', ' England', ' Nicaragua', ' Haiti'} , Length:  42 \n",
       "\n",
       "Values for column salary:  {' >50K', ' <=50K'} , Length:  2 \n",
       "\n"
@@ -301,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "f3145858",
    "metadata": {},
    "outputs": [
@@ -333,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "3654fd3f",
    "metadata": {},
    "outputs": [
@@ -358,7 +349,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "d8a2aa9d",
    "metadata": {},
    "outputs": [],
@@ -384,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "id": "00ccf353",
    "metadata": {},
    "outputs": [
@@ -466,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "id": "5ae21064",
    "metadata": {},
    "outputs": [
@@ -500,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "28f1fee5",
    "metadata": {},
    "outputs": [
@@ -579,8 +570,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "a8b4661a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>workclass</th>\n",
+       "      <th>fnlgt</th>\n",
+       "      <th>education</th>\n",
+       "      <th>education-num</th>\n",
+       "      <th>marital-status</th>\n",
+       "      <th>occupation</th>\n",
+       "      <th>relationship</th>\n",
+       "      <th>race</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>capital-gain</th>\n",
+       "      <th>capital-loss</th>\n",
+       "      <th>hours-per-week</th>\n",
+       "      <th>native-country</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>39</td>\n",
+       "      <td>State-gov</td>\n",
+       "      <td>77516</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Never-married</td>\n",
+       "      <td>Adm-clerical</td>\n",
+       "      <td>Not-in-family</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>2174</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>50</td>\n",
+       "      <td>Self-emp-not-inc</td>\n",
+       "      <td>83311</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Exec-managerial</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>38</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>215646</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Divorced</td>\n",
+       "      <td>Handlers-cleaners</td>\n",
+       "      <td>Not-in-family</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>53</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>234721</td>\n",
+       "      <td>11th</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Handlers-cleaners</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>28</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>338409</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Prof-specialty</td>\n",
+       "      <td>Wife</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Cuba</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age         workclass   fnlgt  education  education-num  \\\n",
+       "0   39         State-gov   77516  Bachelors             13   \n",
+       "1   50  Self-emp-not-inc   83311  Bachelors             13   \n",
+       "2   38           Private  215646    HS-grad              9   \n",
+       "3   53           Private  234721       11th              7   \n",
+       "4   28           Private  338409  Bachelors             13   \n",
+       "\n",
+       "       marital-status         occupation   relationship   race      sex  \\\n",
+       "0       Never-married       Adm-clerical  Not-in-family  White     Male   \n",
+       "1  Married-civ-spouse    Exec-managerial        Husband  White     Male   \n",
+       "2            Divorced  Handlers-cleaners  Not-in-family  White     Male   \n",
+       "3  Married-civ-spouse  Handlers-cleaners        Husband  Black     Male   \n",
+       "4  Married-civ-spouse     Prof-specialty           Wife  Black   Female   \n",
+       "\n",
+       "   capital-gain  capital-loss  hours-per-week native-country salary  \n",
+       "0          2174             0              40  United-States  <=50K  \n",
+       "1             0             0              13  United-States  <=50K  \n",
+       "2             0             0              40  United-States  <=50K  \n",
+       "3             0             0              40  United-States  <=50K  \n",
+       "4             0             0              40           Cuba  <=50K  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5f5f613a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('../data/census_intermediate.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7133c35f",
    "metadata": {},
    "outputs": [],
    "source": []
