Added assessment on model fairness, and formatted notebooks

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -5,7 +5,12 @@
    "id": "02ae5ad3",
    "metadata": {},
    "source": [
-    "# EDA Notebook"
+    "# EDA Notebook\n",
+    "\n",
+    "In this notebook, we're going to perform some EDA on the census dataset.\n",
+    "\n",
+    "## Setup\n",
+    "First, we import required libraries and read the data."
    ]
   },
   {
@@ -15,6 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import required libraries\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -28,6 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read data\n",
     "df = pd.read_csv('../data/census.csv')"
    ]
   },
@@ -199,6 +206,7 @@
     }
    ],
    "source": [
+    "# Display snippet of data\n",
     "df.head()"
    ]
   },
@@ -232,7 +240,18 @@
     }
    ],
    "source": [
+    "# Get data types\n",
     "print(df.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "095bc767",
+   "metadata": {},
+   "source": [
+    "## Data Cleaning\n",
+    "\n",
+    "Here, we perform some data cleaning on the census dataset."
    ]
   },
   {
@@ -242,6 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Rename columns to remove whitespaces\n",
     "df.columns = [\n",
     "    'age', 'workclass', 'fnlgt', 'education', 'education-num',\n",
     "    'marital-status', 'occupation', 'relationship', 'race','sex',\n",
@@ -282,6 +302,7 @@
     }
    ],
    "source": [
+    "# Get unique values for each categorical feature\n",
     "Categorical_vals = ['workclass', 'education', 'education-num', 'marital-status', \n",
     "                    'occupation', 'relationship', 'race','native-country',\n",
     "                    'salary']\n",
@@ -314,6 +335,7 @@
     }
    ],
    "source": [
+    "# Describe numerical features\n",
     "Integer_vals = ['age', 'fnlgt',\n",
     "                'capital-gain', 'capital-loss',\n",
     "                'hours-per-week']\n",
@@ -355,6 +377,7 @@
     }
    ],
    "source": [
+    "# Check for null values\n",
     "df.isna().sum()"
    ]
   },
@@ -365,12 +388,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Strip whitespaces from categorical features\n",
     "cols_to_strip = ['workclass', 'education', 'marital-status', \n",
     "                 'occupation', 'relationship', 'race',\n",
     "                 'native-country','salary']\n",
     "\n",
     "for col in cols_to_strip:\n",
     "    df[col] = df[col].str.strip()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e988bd8",
+   "metadata": {},
+   "source": [
+    "## Plotting Some Figures\n",
+    "\n",
+    "Some plots to show the EDA results can be found below."
    ]
   },
   {
@@ -566,6 +600,15 @@
     "    i = i + 1\n",
     "    \n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e7b23aa",
+   "metadata": {},
+   "source": [
+    "## Export Cleaned Data\n",
+    "Finally, we save the cleaned data for future analysis."
    ]
   },
   {
