--- a/notebooks/Model Building.ipynb
+++ b/notebooks/Model Building.ipynb
@@ -297,7 +297,7 @@
     "    print(feature)\n",
     "    print(mapping)\n",
     "    filepath = '../model/{}_encoder.pkl'.format(feature)\n",
-    "    dump(le, open(filepath, 'wb'))\n",
+    "    #dump(le, open(filepath, 'wb'))\n",
     "    print('Saved encoder to model/', '\\n')"
    ]
   },
@@ -551,7 +551,7 @@
    "source": [
     "# Save scaler\n",
     "filepath = '../model/robust_scaler.pkl'\n",
-    "dump(scaler, open(filepath, 'wb'))"
+    "#dump(scaler, open(filepath, 'wb'))"
    ]
   },
   {
@@ -806,7 +806,7 @@
    "source": [
     "# Save model\n",
     "filepath = '../model/xgb_model.pkl'\n",
-    "dump(xgb_final, open(filepath, 'wb'))"
+    "#dump(xgb_final, open(filepath, 'wb'))"
    ]
   },
   {
@@ -979,7 +979,7 @@
    "outputs": [],
    "source": [
     "# Save data & prediction results\n",
-    "df.to_csv('../Predictions.csv', index = False)"
+    "#df.to_csv('../Predictions.csv', index = False)"
    ]
   },
   {
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "id": "f51c3cd8",
    "metadata": {},
    "outputs": [],
@@ -1036,39 +1036,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Without-pay', 'Private', 'Self-emp-inc', 'Local-gov', 'Never-worked', 'Federal-gov', '?', 'Self-emp-not-inc', 'State-gov'}\n",
+      "{'Self-emp-inc', '?', 'Without-pay', 'Self-emp-not-inc', 'Private', 'Never-worked', 'State-gov', 'Local-gov', 'Federal-gov'}\n",
       "9\n",
-      "{'Without-pay', 'Self-emp-inc', 'Private', 'Local-gov', 'Never-worked', 'Federal-gov', '?', 'Self-emp-not-inc', 'State-gov'}\n",
+      "{'Self-emp-inc', '?', 'Without-pay', 'Self-emp-not-inc', 'Private', 'Never-worked', 'State-gov', 'Local-gov', 'Federal-gov'}\n",
       "9\n",
       "\n",
       "\n",
-      "{'1st-4th', 'Prof-school', 'Assoc-acdm', '5th-6th', '7th-8th', 'Assoc-voc', 'HS-grad', 'Preschool', 'Doctorate', 'Masters', '11th', 'Some-college', '12th', '10th', 'Bachelors', '9th'}\n",
+      "{'Assoc-acdm', 'Prof-school', '11th', '9th', '10th', 'Masters', 'Some-college', '7th-8th', 'Assoc-voc', 'Preschool', 'HS-grad', 'Doctorate', 'Bachelors', '12th', '1st-4th', '5th-6th'}\n",
       "16\n",
-      "{'1st-4th', 'Prof-school', '5th-6th', 'Assoc-acdm', '7th-8th', '9th', 'Assoc-voc', 'HS-grad', 'Preschool', 'Doctorate', 'Masters', 'Some-college', '12th', '10th', 'Bachelors', '11th'}\n",
+      "{'Assoc-acdm', 'Prof-school', '11th', '10th', '9th', '7th-8th', 'Some-college', 'Masters', 'Assoc-voc', 'Preschool', 'HS-grad', 'Doctorate', 'Bachelors', '12th', '1st-4th', '5th-6th'}\n",
       "16\n",
       "\n",
       "\n",
-      "{'Never-married', 'Separated', 'Married-spouse-absent', 'Divorced', 'Widowed', 'Married-civ-spouse', 'Married-AF-spouse'}\n",
+      "{'Married-spouse-absent', 'Never-married', 'Divorced', 'Married-civ-spouse', 'Widowed', 'Married-AF-spouse', 'Separated'}\n",
       "7\n",
-      "{'Never-married', 'Widowed', 'Separated', 'Divorced', 'Married-spouse-absent', 'Married-civ-spouse', 'Married-AF-spouse'}\n",
+      "{'Married-spouse-absent', 'Never-married', 'Divorced', 'Married-civ-spouse', 'Widowed', 'Married-AF-spouse', 'Separated'}\n",
       "7\n",
       "\n",
       "\n",
-      "{'Handlers-cleaners', 'Prof-specialty', 'Machine-op-inspct', 'Craft-repair', 'Farming-fishing', 'Armed-Forces', 'Tech-support', 'Transport-moving', 'Exec-managerial', 'Other-service', 'Sales', 'Adm-clerical', 'Priv-house-serv', '?', 'Protective-serv'}\n",
+      "{'Craft-repair', 'Tech-support', '?', 'Sales', 'Machine-op-inspct', 'Protective-serv', 'Transport-moving', 'Handlers-cleaners', 'Adm-clerical', 'Exec-managerial', 'Priv-house-serv', 'Other-service', 'Farming-fishing', 'Armed-Forces', 'Prof-specialty'}\n",
       "15\n",
-      "{'Prof-specialty', 'Handlers-cleaners', 'Machine-op-inspct', 'Farming-fishing', 'Craft-repair', 'Armed-Forces', 'Tech-support', 'Transport-moving', 'Exec-managerial', 'Other-service', 'Sales', 'Adm-clerical', 'Priv-house-serv', '?', 'Protective-serv'}\n",
+      "{'Craft-repair', 'Tech-support', '?', 'Sales', 'Machine-op-inspct', 'Protective-serv', 'Transport-moving', 'Handlers-cleaners', 'Adm-clerical', 'Exec-managerial', 'Priv-house-serv', 'Other-service', 'Farming-fishing', 'Armed-Forces', 'Prof-specialty'}\n",
       "15\n",
       "\n",
       "\n",
-      "{'Not-in-family', 'Own-child', 'Other-relative', 'Unmarried', 'Wife', 'Husband'}\n",
+      "{'Not-in-family', 'Other-relative', 'Husband', 'Own-child', 'Unmarried', 'Wife'}\n",
       "6\n",
-      "{'Not-in-family', 'Own-child', 'Other-relative', 'Unmarried', 'Wife', 'Husband'}\n",
+      "{'Not-in-family', 'Other-relative', 'Husband', 'Own-child', 'Unmarried', 'Wife'}\n",
       "6\n",
       "\n",
       "\n",
-      "{'White', 'Amer-Indian-Eskimo', 'Other', 'Asian-Pac-Islander', 'Black'}\n",
+      "{'White', 'Black', 'Other', 'Amer-Indian-Eskimo', 'Asian-Pac-Islander'}\n",
       "5\n",
-      "{'White', 'Amer-Indian-Eskimo', 'Other', 'Asian-Pac-Islander', 'Black'}\n",
+      "{'White', 'Black', 'Other', 'Amer-Indian-Eskimo', 'Asian-Pac-Islander'}\n",
       "5\n",
       "\n",
       "\n",
@@ -1078,9 +1078,9 @@
       "2\n",
       "\n",
       "\n",
-      "{'Outlying-US(Guam-USVI-etc)', 'Poland', 'Columbia', 'China', 'Greece', 'Nicaragua', 'Scotland', 'Vietnam', 'Yugoslavia', 'Cambodia', 'Holand-Netherlands', 'France', 'Haiti', 'Canada', 'Peru', 'Puerto-Rico', 'Laos', 'El-Salvador', 'Trinadad&Tobago', 'Philippines', 'Germany', 'Ireland', 'Guatemala', 'Iran', 'Japan', 'England', 'Dominican-Republic', '?', 'Honduras', 'Ecuador', 'Hong', 'Mexico', 'South', 'Cuba', 'Hungary', 'Portugal', 'Jamaica', 'United-States', 'Thailand', 'Italy', 'Taiwan', 'India'}\n",
+      "{'Germany', 'Canada', 'Jamaica', 'Taiwan', 'Hungary', 'China', 'Philippines', 'Dominican-Republic', 'Columbia', 'Poland', 'Laos', 'Japan', 'Iran', 'United-States', 'Hong', 'Honduras', 'Mexico', 'Puerto-Rico', 'Outlying-US(Guam-USVI-etc)', 'Scotland', 'Yugoslavia', 'Thailand', 'France', 'Cambodia', 'Vietnam', 'India', 'Italy', 'El-Salvador', 'Portugal', 'Ireland', 'Nicaragua', '?', 'Greece', 'Trinadad&Tobago', 'Peru', 'England', 'South', 'Guatemala', 'Cuba', 'Haiti', 'Holand-Netherlands', 'Ecuador'}\n",
       "42\n",
-      "{'Outlying-US(Guam-USVI-etc)', 'China', 'Poland', 'Columbia', 'Greece', 'Nicaragua', 'Vietnam', 'Scotland', 'Yugoslavia', 'Cambodia', 'Holand-Netherlands', 'France', 'Peru', 'Canada', 'Haiti', 'Puerto-Rico', 'El-Salvador', 'Laos', 'Trinadad&Tobago', 'Philippines', 'Germany', 'Ireland', 'Guatemala', 'Iran', 'Japan', 'England', 'Dominican-Republic', '?', 'Honduras', 'Ecuador', 'Hong', 'Mexico', 'South', 'Cuba', 'Hungary', 'Portugal', 'Jamaica', 'United-States', 'Thailand', 'Italy', 'Taiwan', 'India'}\n",
+      "{'Germany', 'Canada', 'Jamaica', 'Taiwan', 'Hungary', 'China', 'Philippines', 'Dominican-Republic', 'Columbia', 'Poland', 'Laos', 'Japan', 'Iran', 'United-States', 'Hong', 'Honduras', 'Mexico', 'Puerto-Rico', 'Outlying-US(Guam-USVI-etc)', 'Scotland', 'Yugoslavia', 'Thailand', 'France', 'Cambodia', 'Vietnam', 'India', 'Italy', 'El-Salvador', 'Portugal', 'Ireland', 'Nicaragua', '?', 'Greece', 'Trinadad&Tobago', 'Peru', 'England', 'South', 'Guatemala', 'Cuba', 'Haiti', 'Holand-Netherlands', 'Ecuador'}\n",
       "42\n",
       "\n",
       "\n"
@@ -1462,16 +1462,13 @@
    "outputs": [],
    "source": [
     "# Store results\n",
-    "slice_performance_df.to_csv('../Performance_on_slices.csv', index = False)"
+    "path = '../slice_output.txt'\n",
+    "\n",
+    "#export DataFrame to text file\n",
+    "#with open(path, 'a') as f:\n",
+    "#    df_string = slice_performance_df.to_string(header=True, index=False)\n",
+    "#    f.write(df_string)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51cc4b5f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
