Updated docs and dvc

--- a/notebooks/Model Bias & Fairness.ipynb
+++ b/notebooks/Model Bias & Fairness.ipynb
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "# Read in data, along with the XGBoost predictions\n",
-    "df = pd.read_csv('../Predictions.csv')"
+    "df = pd.read_csv('../data/Predictions.csv')"
    ]
   },
   {
