--- a/notebooks/Model Building.ipynb
+++ b/notebooks/Model Building.ipynb
@@ -979,7 +979,7 @@
    "outputs": [],
    "source": [
     "# Save data & prediction results\n",
-    "#df.to_csv('../Predictions.csv', index = False)"
+    "#df.to_csv('../data/Predictions.csv', index = False)"
    ]
   },
   {
